# Chip8-emu

./: .gitignore  CMakeLists.txt  Chip8Config.h.in  LICENSE  README.md
src/: chip8.c  chip8.h  main.c  ui.c  ui.h
